--- a/package.json
+++ b/package.json
@@ -1,8 +1,16 @@
 {
   "name": "ryezx-apis",
   "version": "1.0.0",
-  "type": "module",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
   "dependencies": {
-    "axios": "^1.6.8"
+    "axios": "^1.6.7",
+    "next": "14.1.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   }
 }
