--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest"
+  "axios": "^1.6.8",
+  "next": "13.5.6",
+  "react": "18.2.0",
+  "react-dom": "18.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
